Fix background blurs on IE8.
- Fuck IE8, seriously.
- Do not use multiple backgrounds, but two separated divs instead to achieve
  the same effect without conditionals.
- Thumbnail overlays are buggy, but we'll live with that.

--- a/view/index.css
+++ b/view/index.css
@@ -45,6 +45,26 @@ img
   outline: none;
 }
 
+#gallery #background
+{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+#gallery #noise
+{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url(noise.png);
+  background-repeat: repeat;
+}
+
 #gallery #content
 {
   position: absolute;
